se ha retocado el css

--- a/views/company/edit.ejs
+++ b/views/company/edit.ejs
@@ -48,6 +48,7 @@
             <input type="hidden" name="modifiedDate" value="<%= `${anyo}-${mes}-${dia}` %>" readonly> <!-- Campo de fecha final -->
             
             <button>Enviar</button><br>
+            <a href="<%= BaseURL %>company/<%= datosCompany._id %>">Cancelar</a>
         </fieldset>
     </form>
 </body>
