--- a/public/stylesCompany.css
+++ b/public/stylesCompany.css
@@ -1,8 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Bungee&family=Genos:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 
 /*** Cabecera ***/
 
 body{
-    background: linear-gradient(0.25turn, #8697e7, #383c63);
+    background: linear-gradient(0.25turn, #282b47, #383c63);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: "Roboto", sans-serif;
 }
 
 h1{
@@ -32,14 +38,29 @@ a{
     border-radius: 10px;
 }
 
+#body{
+    width: 100%;
+}
+
+#boton{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
 /*** Formulario ***/
+form{
+    width: 75%;
+}
+
 fieldset{
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(#a8e786, #6d9855);
+    background: linear-gradient(#737373, #3e3e3e);
     width: 95%;
 }
 
@@ -55,7 +76,7 @@ fieldset button{
 }
 
 legend{
-    color:darkgreen;
+    color:white;
     font-weight: bold;
     font-size: 20px;
 }
@@ -91,5 +112,21 @@ ul{
 
 #crearUsuario{
     width: 100%;
+}
 
+.formNuevaEmpresa{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.inputForm{
+    width: 40%;
+}
+
+.inputForm input{
+    width: 100%;
+    margin: 0px 10px 10px;
 }
