--- a/views/company/new.ejs
+++ b/views/company/new.ejs
@@ -10,11 +10,11 @@
 <body>
     <h1>Nueva Empresa</h1>
     <fieldset id="nav">
-        <a href="<%= BaseURL %>company">Inicio</a> <!-- Enlace al index de emprtesas -->
-        <a href="<%= BaseURL %>inscription">Inscripciones</a> <!-- Enlace al index de inscripciones -->
-        <a href="<%= BaseURL %>users">Usuarios</a> <!-- Enlace al index de usuarios -->
+        <a href="<%= BaseURL %>company/SSR">Inicio</a> <!-- Enlace al index de emprtesas -->
+        <a href="<%= BaseURL %>inscription/SSR">Inscripciones</a> <!-- Enlace al index de inscripciones -->
+        <a href="<%= BaseURL %>users/SSR">Usuarios</a> <!-- Enlace al index de usuarios -->
     </fieldset>
-    <form action="<%= BaseURL %>company" method="POST"> <!-- Formulario de nueva empresa -->
+    <form action="<%= BaseURL %>company/SSR" method="POST"> <!-- Formulario de nueva empresa -->
         <fieldset>
             <legend>Nueva Empresa</legend>
             <h3>DATOS GENERALES</h3>
