--- a/views/inscription/index.ejs
+++ b/views/inscription/index.ejs
@@ -11,8 +11,8 @@
     <h1>Página Inscription</h1>
     <fieldset id="nav">
         <a href="<%= BaseURL %>inscription/SSR/new">Nueva inscription</a> <!-- Enlace para nueva inscripción -->
-        <a href="<%= BaseURL %>company">Empresas</a> <!-- Enlace a index de emprtesa -->
-        <a href="<%= BaseURL %>users">Usuarios</a> <!-- Enlace a index de usuarios -->
+        <a href="<%= BaseURL %>company/SSR">Empresas</a> <!-- Enlace a index de emprtesa -->
+        <a href="<%= BaseURL %>users/SSR">Usuarios</a> <!-- Enlace a index de usuarios -->
     </fieldset><br>
     <div id="body">
 
