--- a/views/inscription/new.ejs
+++ b/views/inscription/new.ejs
@@ -11,8 +11,8 @@
     <h1>Página New Inscription</h1>
     <fieldset id="nav">
         <a href="<%= BaseURL %>inscription/SSR/new">Nueva inscription</a> <!-- Enlace para nueva inscripción -->
-        <a href="<%= BaseURL %>company">Empresas</a> <!-- Enlace al index de empresas -->
-        <a href="<%= BaseURL %>users">Usuarios</a> <!-- Enlace al index de usuarios -->
+        <a href="<%= BaseURL %>company/SSR">Empresas</a> <!-- Enlace al index de empresas -->
+        <a href="<%= BaseURL %>users/SSR">Usuarios</a> <!-- Enlace al index de usuarios -->
     </fieldset><br>
     <form action="<%= BaseURL %>inscription/SSR" method="POST"> <!-- Formulario de nueva inscripción -->
         <fieldset>
