--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -10,9 +10,9 @@
 <body>
     <h1>PAGINA INICIO USERS</h1>
     <fieldset id="nav">
-        <a href="<%= BaseURL %>users/new">Nuevo usuario</a>  <!-- Enlace para nueva inscripción -->
-        <a href="<%= BaseURL %>inscription">Inscripciones</a> <!-- Enlace a index de inscripcion -->
-        <a href="<%= BaseURL %>company">Empresas</a> <!-- Enlace a index de empresa -->
+        <a href="<%= BaseURL %>users/SSR/new">Nuevo usuario</a>  <!-- Enlace para nueva inscripción -->
+        <a href="<%= BaseURL %>inscription/SSR">Inscripciones</a> <!-- Enlace a index de inscripcion -->
+        <a href="<%= BaseURL %>company/SSR">Empresas</a> <!-- Enlace a index de empresa -->
     </fieldset><br>
 
     <% for( let c of datosUsers ) { %> <!-- Bucle para listar los usuarios -->
@@ -20,7 +20,7 @@
             <ul>
                 <li>NIF : <%= c.nif %></li>
                 <li>Username : <%= c.username %></li>
-                <a href="<%= BaseURL %>users/<%= c.idUser %>">Show Details</a>  <!-- Enlace a la pagina de show con el id del usuario -->
+                <a href="<%= BaseURL %>users/SSR/<%= c.idUser %>">Show Details</a>  <!-- Enlace a la pagina de show con el id del usuario -->
             </ul>
         </fieldset><br>
     <% } %>
