--- a/views/company/index.ejs
+++ b/views/company/index.ejs
@@ -10,9 +10,9 @@
 <body>
     <h1>EMPRESAS</h1>
     <fieldset id="nav">
-        <a href="<%= BaseURL %>company/new">Nueva empresa</a> <!-- Enlace para nueva emprtesa -->
-        <a href="<%= BaseURL %>inscription">Inscripciones</a> <!-- Enlace a index de inscripciones -->
-        <a href="<%= BaseURL %>users">Usuarios</a> <!-- Enlace a index de usuarios -->
+        <a href="<%= BaseURL %>company/SSR/new">Nueva empresa</a> <!-- Enlace para nueva emprtesa -->
+        <a href="<%= BaseURL %>inscription/SSR">Inscripciones</a> <!-- Enlace a index de inscripciones -->
+        <a href="<%= BaseURL %>users/SSR">Usuarios</a> <!-- Enlace a index de usuarios -->
     </fieldset>
     
     <div id="empresas">
@@ -34,7 +34,7 @@
             <p>Teléfono: <%= e.phone %></p> <!-- Muestra el telefono -->
             <p>Email: <%= e.email %></p><br> <!-- Muestra el email -->
 
-            <a href="<%= BaseURL %>company/<%= e._id %>">Más detalles</a> <!-- Enlace al show de la cempresa con el id -->
+            <a href="<%= BaseURL %>company/SSR/<%= e._id %>">Más detalles</a> <!-- Enlace al show de la cempresa con el id -->
         </fieldset>
     <%} %>
 </body>
