--- a/views/inscription/new.ejs
+++ b/views/inscription/new.ejs
@@ -42,6 +42,7 @@
             <input type="text" placeholder="Observaciones" name="Observaciones"> <!-- Campo de observaciones -->
             <br><br>
             <button>Guardar</button>
+            <button><a href="<%= BaseURL %>inscription/SSR">Cancelar</a></button>
         </fieldset>
     </form>
 </body>
