he añadido cosas que faltaban

--- a/views/inscription/edit.ejs
+++ b/views/inscription/edit.ejs
@@ -22,7 +22,8 @@
             <input type="date" placeholder="Fecha Fin" name="FecFin" value="<%= inscription.FecFin %>"> <!-- Campo de fecha fin -->
             <label for="Observaciones">Observaciones:</label>
             <input type="text" placeholder="Observaciones" name="Observaciones" value="<%= inscription.Observaciones %>"> <!-- Campo de observaciones -->
-            <button>Guardar</button>
+            <button>Guardar</button><br>
+            <a href="<%= BaseURL %>inscription/SSR/">Cancelar</a>
         </fieldset>
     </form>
 </body>
