--- a/views/inscription/new.ejs
+++ b/views/inscription/new.ejs
@@ -41,8 +41,8 @@
             <label for="Observaciones">Observaciones:</label>
             <input type="text" placeholder="Observaciones" name="Observaciones"> <!-- Campo de observaciones -->
             <br><br>
-            <button>Guardar</button>
-            <button><a href="<%= BaseURL %>inscription/SSR">Cancelar</a></button>
+            <button>Guardar</button><br>
+            <a href="<%= BaseURL %>inscription/SSR/">Cancelar</a>
         </fieldset>
     </form>
 </body>
