--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -25,8 +25,10 @@
         <p>Email: <%= datosUsuario.email %></p> <!-- Muestra el email -->
 
         <h3>DATOS DE ACTUALIZACIÓN</h3>
-        <p>Created Date: <%= datosUsuario.createdDate %></p> <!-- Muestra la fecha de creación -->
-        <p>Modified Date: <%= datosUsuario.modifiedDate %></p> <!-- Muestra la fecha de modificación -->
+        <% let fechaCreado = `${datosUsuario.createdDate.getDate().toString()}-${(datosUsuario.createdDate.getMonth()+1).toString()}-${datosUsuario.createdDate.getFullYear().toString()}` %>
+        <% let fechaModificado = `${datosUsuario.modifiedDate.getDate().toString()}-${(datosUsuario.modifiedDate.getMonth()+1).toString()}-${datosUsuario.modifiedDate.getFullYear().toString()}` %>
+        <p>Created Date: <%= fechaCreado %></p> <!-- Muestra la fecha de creación -->
+        <p>Modified Date: <%= fechaModificado %></p> <!-- Muestra la fecha de modificación -->
         <p>ROL: <%= datosUsuario.profile %></p> <!-- Muestra el rol -->
         
         <a href="<%= BaseURL %>users/SSR">Volver</a><br> <!-- Enlace para volver al index -->
